--- a/circle/style.css
+++ b/circle/style.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -6,7 +8,7 @@ body{
     background-color: #1B1928;
     color: #C0C8F2;
     display: flex;
-    font-family: arial;
+    font-family: 'Open Sans', sans-serif;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -92,8 +94,8 @@ to{
 
 .text span {
 	position: absolute;
-	font-size: 1.2em;
-	transform-origin: 0px 200px;
+	/* font-size: 1.2em; */
+	/* transform-origin: 0px 140px !important; */
 }
     
 @media only screen and (max-width: 500px) {
